tests/baselines/reference/es6ImportNamedImportNoNamedExports.errors.txt
tests/cases/compiler/es6ImportNamedImportNoNamedExports_1.ts(1,10): error TS2459: Module '"./es6ImportNamedImportNoNamedExports_0"' declares 'a' locally, but it is not exported.
tests/cases/compiler/es6ImportNamedImportNoNamedExports_1.ts(2,10): error TS2459: Module '"./es6ImportNamedImportNoNamedExports_0"' declares 'a' locally, but it is not exported.


==== tests/cases/compiler/es6ImportNamedImportNoNamedExports_0.ts (0 errors) ====
    var a = 10;
    export = a;
    
==== tests/cases/compiler/es6ImportNamedImportNoNamedExports_1.ts (2 errors) ====
    import { a } from "./es6ImportNamedImportNoNamedExports_0";
             ~
!!! error TS2459: Module '"./es6ImportNamedImportNoNamedExports_0"' declares 'a' locally, but it is not exported.
!!! related TS2728 tests/cases/compiler/es6ImportNamedImportNoNamedExports_0.ts:1:5: 'a' is declared here.
    import { a as x } from "./es6ImportNamedImportNoNamedExports_0";
             ~
!!! error TS2459: Module '"./es6ImportNamedImportNoNamedExports_0"' declares 'a' locally, but it is not exported.
!!! related TS2728 tests/cases/compiler/es6ImportNamedImportNoNamedExports_0.ts:1:5: 'a' is declared here.